# atelier

./: atelier.toml  flake.nix  pyproject.toml  readme.md
.github/actions/atelier/: action.yaml
.github/workflows/: build.yaml  ci.yaml  discover.yaml  run_discover.yaml
src/atelier/: cli.py  discover.py  nix.py  rules.py  types.py
tests/: test_cli.py  test_discover.py  test_nix.py  test_rules.py
