[project]
name = "atelier"
version = "2026.530.0"
description = "nix atelier ;)"
readme = "readme.md"
requires-python = ">=3.14"
dependencies = ["click"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest"]

[project.scripts]
atelier = "atelier.__main__:main"
