[project]
name = "atelier"
version = "2026.601.0"
description = "nix atelier ;)"
readme = "readme.md"
requires-python = ">=3.14"
dependencies = ["click"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest"]

[project.scripts]
atelier = "atelier.__main__:main"
